Solved overflow issue on small sizes of screen cause added gsap

--- a/src/common/footer/footer.module.scss
+++ b/src/common/footer/footer.module.scss
@@ -7,6 +7,7 @@
     #fff 20%,
     #fff 100%
   );
+  overflow: hidden;
 
   .contactussectiomflx {
     display: flex;
