--- a/src/components/homecomponents/decorsection/decorsection.module.scss
+++ b/src/components/homecomponents/decorsection/decorsection.module.scss
@@ -1,6 +1,7 @@
 .decorsectionmain {
   padding: 60px 0;
   background-color: #e5e5e5;
+  overflow: hidden;
 
   .decorideabox {
     position: relative;
