--- a/src/components/homecomponents/driven/driven.module.scss
+++ b/src/components/homecomponents/driven/driven.module.scss
@@ -9,6 +9,7 @@
     #e5e5e5 60%,
     #e5e5e5 100%
   );
+  overflow: hidden;
 
   .driven {
     .driventitle {
