--- a/src/components/homecomponents/interiordesign/interiordesign.module.scss
+++ b/src/components/homecomponents/interiordesign/interiordesign.module.scss
@@ -1,5 +1,6 @@
 .interiordesignmain {
   padding: 60px 0;
+  overflow: hidden;
 
   .interiordesignflx {
     display: grid;
