--- a/src/components/homecomponents/interiordesigners/interiordesigners.module.scss
+++ b/src/components/homecomponents/interiordesigners/interiordesigners.module.scss
@@ -1,6 +1,7 @@
 .interiordesignersmain {
     background-color: #e5e5e5;
     padding: 60px 0;
+    overflow: hidden;
 
     .interiordesignertitle {
         margin-bottom: 50px;
