--- a/src/components/homecomponents/realtime/realtime.module.scss
+++ b/src/components/homecomponents/realtime/realtime.module.scss
@@ -1,5 +1,6 @@
 .realtimesectionmain {
   padding: 60px 0;
+  overflow: hidden;
 
   .realtimeflxmain {
     display: flex;
