--- a/src/components/homecomponents/wecreate/wecreate.module.scss
+++ b/src/components/homecomponents/wecreate/wecreate.module.scss
@@ -7,6 +7,7 @@
     #e5e5e5 100%
   );
   padding: 60px 0;
+  overflow: hidden;
 
   .wecreateflxmain {
     display: flex;
