--- a/src/components/homecomponents/wedegin/wedesign.module.scss
+++ b/src/components/homecomponents/wedegin/wedesign.module.scss
@@ -1,6 +1,7 @@
 .wedesignmain {
   padding: 60px 0;
   background-color: #e5e5e5;
+  overflow: hidden;
 
   .wedesigntitle {
     padding: 60px 0;
